--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -39,12 +39,8 @@
 
   <div class="form-group">
     <label for="format">Format</label>
-    <select class="form-control" id="format">
-      <option>Paperback</option>
-      <option>Hardcover</option>
-      <option>Audiobook</option>
-      <option>Leather Bound</option>
-      <option>Spiral Bound</option>
+    <select class="form-control" id="formatId" [(ngModel)]="newBook.formatId" #formatId="ngModel" required >
+        <option *ngFor="let format of formatsFromDb" [value]="format.id" >{{format.name}}</option>
     </select>
   </div>
 
@@ -96,7 +92,7 @@
   <div [hidden]="companyId.valid || companyId.untouched" class="alert alert-danger">
     Не валидное поле
   </div>
-  <button type="submit" class="btn btn-primary mt-4" (click)="createNewBook()" [disabled]="author.invalid || title.invalid || isbn.invalid || pages.invalid || description.invalid || price.invalid || countryId.invalid || cityId.invalid || companyId.invalid" >Submit</button>
+  <button type="submit" class="btn btn-primary mt-4" (click)="createNewBook()" [disabled]="author.invalid || title.invalid || isbn.invalid || pages.invalid || formatId || description.invalid || price.invalid || countryId.invalid || cityId.invalid || companyId.invalid" >Submit</button>
 
 
 </div>
@@ -140,12 +136,8 @@
     </div>
     <div class="form-group">
       <label for="format">Format</label>
-      <select class="form-control" id="format" >
-        <option>Paperback</option>
-        <option>Hardcover</option>
-        <option>Audiobook</option>
-        <option>Leather Bound</option>
-        <option>Spiral Bound</option>
+      <select class="form-control" id="format" name="formatId" [(ngModel)]="cBook.formatId" #formatId="ngModel" required >
+        <option *ngFor="let format of formatsFromDb" [value]="format.id" >{{format.name}}</option>
       </select>
     </div>
 
@@ -170,7 +162,7 @@
     <div class="form-group">
       <label for="country">Country</label>
       <select class="form-control" id="country"  name="countryId" [(ngModel)]="cBook.countryId" #countryId="ngModel" required pattern="[0-9]{1,6}">
-          <option *ngFor="let country of countriesFromDb" [value]="country.id" [selected]="country.id == curCountryId">{{country.id}}</option>
+          <option *ngFor="let country of countriesFromDb" [value]="country.id" >{{country.id}}</option>
       </select>
     </div>
     <div [hidden]="countryId.valid || countryId.untouched" class="alert alert-danger">
@@ -181,7 +173,7 @@
     <div class="form-group">
       <label for="city">City</label>
       <select class="form-control" id="city"  name="cityId" [(ngModel)]="cBook.cityId" #cityId="ngModel">
-          <option *ngFor="let city of citiesFromDb" [value]="city.id" [selected]="city.id == curCityId">{{city.id}}</option>
+          <option *ngFor="let city of citiesFromDb" [value]="city.id" >{{city.id}}</option>
       </select>
     </div>
     <div [hidden]="cityId.valid || cityId.untouched" class="alert alert-danger">
@@ -191,13 +183,14 @@
     <div class="form-group">
       <label for="company">Company</label>
       <select class="form-control" id="company" name="companyId" [(ngModel)]="cBook.companyId" #companyId="ngModel" required>
-        <option *ngFor="let company of companiesFromDb" [value]="company.id" [selected]="company.id == curCompanyId">{{company.id}} - {{company.name}}</option>
+        <option *ngFor="let company of companiesFromDb" [value]="company.id" >{{company.id}} - {{company.name}}</option>
       </select>
     </div>
     <div [hidden]="companyId.valid || companyId.untouched" class="alert alert-danger">
       Не валидное поле
     </div>
-    <button type="submit" class="btn btn-primary mt-4"  (click)="editedBook()"  [disabled]="author.invalid || title.invalid || isbn.invalid || pages.invalid || description.invalid || price.invalid || countryId.invalid || cityId.invalid || companyId.invalid">Submit</button>
+    <button type="submit" class="btn btn-primary mt-4"  (click)="editedBook()"  [disabled]="author.invalid || title.invalid || isbn.invalid || pages.invalid || formatId.invalid || description.invalid || price.invalid || countryId.invalid || cityId.invalid || companyId.invalid">Submit</button>
 
   </form>
 </div>
+<!--  -->
