--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -92,7 +92,7 @@
   <div [hidden]="companyId.valid || companyId.untouched" class="alert alert-danger">
     Не валидное поле
   </div>
-  <button type="submit" class="btn btn-primary mt-4" (click)="createNewBook()" [disabled]="author.invalid || title.invalid || isbn.invalid || pages.invalid || formatId || description.invalid || price.invalid || countryId.invalid || cityId.invalid || companyId.invalid" >Submit</button>
+  <button type="submit" class="btn btn-primary mt-4" (click)="createNewBook()" [disabled]="author.invalid || title.invalid || isbn.invalid || pages.invalid || formatId.invalid || description.invalid || price.invalid || countryId.invalid || cityId.invalid || companyId.invalid" >Submit</button>
 
 
 </div>
