--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -69,7 +69,6 @@
                     Не валидное поле
                   </div>
               </div>
-
             </div>
           </div>
 
@@ -127,7 +126,7 @@
                   <th scope="col">cityId</th>
                   <th scope="col">companyId</th>
                   <th scope="col">formatId</th>
-                  <th scope="col">description</th>
+                  <th scope="col" style="max-width:200px">description</th>
                   <th scope="col">price</th>
                 </tr>
               </thead>
@@ -142,7 +141,7 @@
                     <td>{{book.cityId}}</td>
                     <td>{{book.companyId}}</td>
                     <td>{{book.formatId}}</td>
-                    <td>{{book.description}}</td>
+                    <td style="max-width:200px">{{book.description}}</td>
                     <td>{{book.price}}</td>
                 </tr>
             
